--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1261,7 +1261,7 @@ But we are constantly adding new markets.
                       >
                         <div class="accordion-body">
                           <p>
-                            A casino software white label solution is the perfect solution for the operators who want to work with online casinos.  Thanks to its experience, Sirplay casino white label, will offer certified and secure casino games. Sirplay Casino white label allows you to customize the casino based on your favourite language and currency.
+                            A casino software white label solution is the perfect solution for the operators who want to work with online casinos.  Thanks to its experience, vrnl casino white label, will offer certified and secure casino games. vrnl Casino white label allows you to customize the casino based on your favourite language and currency.
                           </p>
                         </div>
                       </div>
