--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -717,11 +717,11 @@ nav{
   
     .images_logo{
       margin-top: 21px;
+      width: 134px;
+      height: 53px;
     }
   
-    .normal_header{
-  
-    }
+   
     .responsive_nav{
       display: none;
     }
