--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -1,9 +1,9 @@
 
 <header class="header">
     <img
-      src="assets/Sirplay_sports_betting_software.png"
+      src="assets/VRNL new.png"
       alt=""
-      class="logo" routerLink="/"
+      class="logo new_logos" routerLink="/"
     />
 
     <nav class="navbar">
