--- a/src/app/header3/header3.component.css
+++ b/src/app/header3/header3.component.css
@@ -1119,6 +1119,10 @@ Responsive Codes
   margin: 20px;
 }
 
+.new_logos{
+  width: 134px !important;
+  height: 53px !important;
+}
 /* header css end here */
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;700&display=swap");
