--- a/src/app/online-casino-software/online-casino-software.component.css
+++ b/src/app/online-casino-software/online-casino-software.component.css
@@ -23,7 +23,7 @@ background-color: #a0c528;
     .online-casino_col p{
         font-family: Poppins;
         line-height: 30px;
-        font-weight: 350;
+        font-weight: 395;
         color: #686868;
         font-size: 16px;
     }
@@ -37,9 +37,9 @@ background-color: #a0c528;
         font-weight: 700;
         font-size: 22px;
     }
-    .online-casino-button{
+    /* .online-casino-button{
         margin-left: 15rem;
-    }
+    } */
     .online-casino-youtube img{
 
         transition: all .4s ease-in-out 0s;
@@ -52,7 +52,7 @@ background-color: #a0c528;
         .col1-para{
             font-family: Poppins;
     line-height: 30px;
-    font-weight: 350;
+    font-weight: 395;
     color: #000;
     font-size: 16px;
         }
@@ -79,7 +79,7 @@ background-color: #a0c528;
 .online-casino_para{
     font-family: 'Poppins' !important;
     line-height: 30px;
-    font-weight: 350;
+    font-weight: 395;
     color: #686868;
     font-size: 16px
 
@@ -119,7 +119,7 @@ ol, ul {
     font-size: 16px;
     color: #686868;
     line-height: 30px;
-    font-weight: 350;
+    font-weight: 395;
 }
 .online-casino_col_2 img{
     height: auto;
@@ -153,7 +153,7 @@ ol, ul {
   .casino_whites_sec_p,.clasico_f,.container5-col2 p{
      font-size: 19px; 
      margin-bottom: 0px;
-     font-weight: 350;
+     font-weight: 395;
   }
   .container5-col2 h1 {
     font-size: 22px;
