--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -78,78 +78,55 @@
 
     
 
-        <div class="card1">
-            <div class="card_row1">
-
-                <div class="table-content1">
-                    <p >In our user-friendly Live Casino Game Lobby <br>you can <b>find games like:</b> <br><b>Live Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b></p>
-                </div>
-
-
-
-                <div class="table-col1">
-                <div class="col_1">
-                    <p  class="text">European Roulette</p>
-                </div>
-                <div class="col_2">
-                        <p class="text_1_main">Blackjack</p>
-                </div>         
-            </div>
-            
-            
-
-
-
-            <div class="table-col1">
-                <div class="col_1">
-                    <p class="text">Baccarat</p>
-                </div>
-                <div class="col_2">
-                        <p class="text_2_main">Caribbean Stud</p>
-                </div>         
-            </div>
-     
-
-
-
-            <div class="table-col1">
-                <div class="col_1">
-                    <p class="text">Casino Hold’em</p>
-                </div>
-                <div class="col_2">
-                        <p class="text_3_main">American Roulette</p>
-                </div>         
-            </div>
-            
-          
-
-
-
-
-            <div class="table-col1">
-                <div class="col_1">
-                    <p class="text">Sic Bo</p>
-                </div>
-                <div class="col_2">
-                        <p class="text_4_main" >Craps</p>
-                </div>         
-            </div>
-           
-   
-
-            <div class="table-col1">
-                <div class="col_1">
-                    <p class="text">Dragon Tiger</p>
-                </div>
-                <div class="col_2">
-                        <p class="text_5_main"> <strong>Bingo</strong> </p>
-                </div>         
-            </div>
-            
-        </div>
-        
-       <button class="btns_lives_sec">Book a demo</button>
-        </div>
+            <blockquote class="x-quote e293-e18 m85-1p"><div class="x-quote-content"><div class="x-quote-text"><table>
+                <tbody>
+                <tr>
+                <td colspan="2">
+                <p>In our user-friendly Live Casino Game Lobby</p>
+                <p>you can <b>find games like:</b></p>
+                <p><b>Live Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b></p>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                <p>European Roulette</p>
+                </td>
+                <td>
+                <p>Blackjack</p>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                <p>Baccarat</p>
+                </td>
+                <td>
+                <p>Caribbean Stud</p>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                <p>Casino Hold’em</p>
+                </td>
+                <td>
+                <p>American Roulette</p>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                <p>Sic Bo</p>
+                </td>
+                <td>
+                <p>Craps</p>
+                </td>
+                </tr>
+                <tr>
+                <td>
+                <p>Dragon Tiger</p>
+                </td>
+                <td><strong>&nbsp;Live Bingo</strong></td>
+                </tr>
+                </tbody>
+                </table></div></div></blockquote>
     </div>
 
 
@@ -159,67 +136,6 @@
 </div>
 <!-- <app-contact-component2></app-contact-component2> -->
 
-<div class="side-slider contact-service-box">
-	<button class="slide-btn">
-		<img src="assets\24hrcall.png" alt="contact">
-	</button>
-	<div class="side-slider-content">
-		<!-- <div class="contact-service-icon">
-			<img src="/images/web/icon-set/customers-slider/cs-247.png" alt="contact">
-		</div> -->
-		<!-- <div class="contact-service-logo">
-			<img src="/images/web/icon-set/customers-slider/cs_logo.png" alt="logo">
-		</div> -->
-		<ul id="side-cs-cont" class="contact-service-list"><li id="cs-44" class="icon-cs">
-			<a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_84.png" ui-key="realIconPath">
-				<span ui-key="displayText">Live Chat 24/7</span>
-				
-			</a>
-			
-			<hr>
-		</li><li id="cs-46" class="icon-telegram">
-			<!-- <a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_85.png" ui-key="realIconPath">
-				<span ui-key="displayText">Telegram Support</span>
-				
-			</a> -->
-			
-			<hr>
-		</li><li id="cs-143" class="icon-telegram">
-			<!-- <a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_361.png" ui-key="realIconPath">
-				<span ui-key="displayText">Telegram Channel</span>
-				
-			</a> -->
-			
-			<hr>
-		</li><li id="cs-145" class="icon-fb">
-			<a target="_blank">
-				<img src="https://img.c88rx.com/upload/customerservice/image_363.png" ui-key="realIconPath">
-				<span ui-key="displayText">Facebook Messenger</span>
-				
-			</a>
-			
-			<hr>
-		</li><li id="cs-45" class="icon-mail">
-			<a target="_blank" href="mailto:support@crickex.com">
-				<img src="https://img.c88rx.com/upload/customerservice/image_65.png" ui-key="realIconPath">
-				<span ui-key="displayText">Support Email</span>
-				
-			</a>
-			
-			<hr>
-		</li><li id="cs-81" class="icon-mail">
-			<a target="_blank" href="mailto:marketing@crickex.com">
-				<img src="https://img.c88rx.com/upload/customerservice/image_141.png" ui-key="realIconPath">
-				<span ui-key="displayText">Marketing Email</span>
-				
-			</a>
-			
-			<hr>
-		</li></ul>
-	</div>
-</div>
+
 <app-footers2></app-footers2>
 
