--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -45,14 +45,7 @@
     </div>
 
     <div class="sportsbetting-section1-col2">
-      <iframe
-        loading="lazy"
-        src="https://www.youtube.com/embed/swkaQQCjdoE?rel=0&amp;wmode=transparent"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen=""
-        wmode="Opaque"
-      ></iframe>
+  <img src="assets/players.png" width="100%">
     </div>
   </div>
 </section>
