--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -40,10 +40,8 @@
 
             <div class="iframe_sec_images">
 
-            <iframe width="" height="" src="https://www.youtube.com/embed/7rhY38DTdEI"
-                title="White label Live Casino platform" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+                <img src="assets/casinogirl.png" width="100%">
+
             </div>
         </div>
 
