--- a/src/app/casino-games/casino-games.component.css
+++ b/src/app/casino-games/casino-games.component.css
@@ -10,6 +10,7 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: Raleway, sans-serif !important;
 }
 
 
@@ -53,14 +54,14 @@ b{
 
 
 .left-index3-h1 {
-font-size: 50px;
+font-size: 40px;
 font-family: 'Raleway', sans-serif;  
 font-weight: 500;
 margin-right: calc(-1.999em * -1);
 line-height: 1.3;
 letter-spacing: 0.001em;
 color: #575756;
-font-size: calc(285.7%);
+
 }
 
 
