--- a/src/app/casino-tournament/casino-tournament.component.css
+++ b/src/app/casino-tournament/casino-tournament.component.css
@@ -3214,7 +3214,8 @@ whites_param {
   font-weight: bolder;
 }
 strong{
-  font-weight: 500;
+  font-weight: bold;
+  font-family: "Raleway",sans-serif;
 }
 .index5-left-text p {
   font-size: 16px;
