--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -35,8 +35,8 @@
     <div class="social_icons">
     
         <p class="footer_para_1">Vrnl's logo and graphic material is the company's intellectual property and may not be
-            copied, reproduced, distributed or displayed without written consent of Vrnl.
+            copied, reproduced, distributed or displayed without written consent of Vrnl.</p>
 
-            Copyright © 2020 Vrnl ltd. All rights reserved.</p>
+           <p class="footer_para_2"> Copyright © 2020 Vrnl ltd. All rights reserved.</p>
     </div>
 </section>
