--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -72,7 +72,7 @@
 
 
 .social_sec{
-    padding-top: 80px ;
+    padding: 50px 0;
 }
 .card_container{
     text-align: center;
@@ -110,9 +110,20 @@ color: #fff;
 }
 
 .footer_para_1{
-    padding: 27px;
-    font-size: 14px;
+    padding: 12px;
+    font-size: 11px;
     margin-top: 40px;
+    text-align: center;
+    letter-spacing: 1px;
+    opacity: 1;
+    color: #333;
+    line-height: 1.3;
+    font-family: "Raleway",sans-serif;
+}
+.footer_para_2{
+    /* padding: 27px; */
+    font-size: 11px;
+    /* margin-top: 40px; */
     text-align: center;
     letter-spacing: 1px;
     opacity: 1;
