--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -843,7 +843,7 @@ nav{
   .page-header.is-sticky {
     position: fixed;
     animation: smoothScroll 1s forwards;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);  
+    /* box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);   */
 
   
   }
@@ -3172,4 +3172,7 @@ color: #808080;
   color: rgb(87,87,86);
   font-weight: 300;
     letter-spacing: 0.085em;
+}
+.page-header{
+  border-bottom: none;
 }
