--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -120,6 +120,7 @@ border-bottom: 3px solid #f2f2f2;
 
 .col_2 p{
 padding: 5px 14px 13px 5px;
+font-size: 17px;
 }
 
 
@@ -1550,12 +1551,13 @@ color: #fff;
 }
 
 .left-text-cont2{
-    font-size: calc(285.7%);
+    font-size: 41px;
     font-weight: 200;
     line-height: 1.3;
-    color: #575756;
+    color: rgb(87,87,86);
     letter-spacing: 0.001em;
     margin-right: calc(0.001em * -1);
+    font-family: "Raleway",sans-serif;
 }
 
 .index4-right-img img{
@@ -1571,7 +1573,7 @@ color: #fff;
 
 
 .card4{
-    width: 512px;
+    width: 469px;
     height: 242px;
     border-top-color: rgb(230,230,230);
     border-right-color: rgb(230,230,230);
@@ -1604,10 +1606,11 @@ hr .hr_1 {
 .text4{
     text-align: start;
     padding: 0.5em 0.625em;
-    color: #000;
+    color: rgba(0,0,0,1);
     font-weight: 400;
     font-family: Raleway, sans-serif;
     line-height: 1.4;
+    font-size: 17px;
 }
 
 .text_1-4{
@@ -1616,10 +1619,11 @@ hr .hr_1 {
     font-family: Raleway, sans-serif;
     line-height: 1.4;
     padding: 0.5em 0.625em;
+    font-size: 17px;
 }
 .text_2-4{
 
-    margin-left: 142px;
+    margin-left: 145px;
     font-family: Raleway, sans-serif;
     line-height: 1.4;
     padding: 0.5em 0.625em;
@@ -1630,6 +1634,7 @@ hr .hr_1 {
     font-family: Raleway, sans-serif;
     line-height: 1.4;
     padding: 0.5em 0.625em;
+    font-size: 17px;
 }
 .text_4-4{
 
@@ -1678,9 +1683,9 @@ hr .hr_1 {
 }
 
 .index4-right-text-bold{
-    font-size: 20px;
+    font-size: 26px;
     font-family: Raleway, sans-serif;
-    color: #575756;
+    color: rgb(87,87,86);
 }
 
 /* ==============================INDEX 4 ENDS===========================  */
