--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -15,7 +15,7 @@
           </a>
           </div>
           <div class="row_col_1">
-            <p class="contact_b">English Spanish</p>
+            <p class="contact_b">English</p>
           </div>
         </div>
       </div>
