--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -107,7 +107,7 @@
           <br />products.
         </p>
         <p class="casino_whites_sec_p">
-          In order to speed up your business, we offer <span style="color: #a0c528;">White Label Casino</span> with
+          In order to speed up your business, we offer <span > <a href="/casino" style="color: #a0c528; cursor: pointer;">White Label Casino</a></span> with
           more than 30,000 games.
         </p>
 
