--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -98,7 +98,7 @@
     <div class="plat-odd">
       <div class="plat-oddhead">
         <h1 class="bottom-marg letter-spacing font-weight">Odds</h1>
-        <h2 class="sec-header">The engine of the platform</h2>
+        <h2 class="sec-header sec-line">The engine of the platform</h2>
         <p>
           We have already
           <b class="bold">integrated the best odds providers in the world</b> and if that’s
