--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -1,7 +1,7 @@
 <app-header2></app-header2>
 
 <section class="white_casino_sec">
-    <div class="white_casino_row">
+    <div class="white_casino_row whites_label">
         <div class="white_casino_col">
     <h1 class="white_c_header"><span>Online</span> Casino platform</h1>
     
@@ -15,9 +15,10 @@
     <p class="whitw_a" ><a href="https://betwin123.live/" target="_blank" class="fontcolor">https://betwin123.live/</a></p>
         </div>
     
-        <div class="white_casino_col_1">
+        <div class="white_casino_col_1 ">
     <div class="white_casino_v">
-        <iframe width="" height="" src="https://www.youtube.com/embed/nkmlRmcZ1vM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <!-- <iframe width="" height="" src="assets/online-whitelabel-casino.jpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe> -->
+        <img src="assets/online-whitelabel-casino.jpg"  class="casino-img">
     </div>
         </div>
     </div>
