--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -6,7 +6,9 @@
 
  
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
-
+:root{
+  --bs-navbar-toggler-icon-bg: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffffff' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e);
+}
 *{
     padding: 0;
     margin: 0;
@@ -3175,4 +3177,16 @@ color: #808080;
 }
 .page-header{
   border-bottom: none;
+}
+.navbar-toggler-icon{
+  background-image: var(--bs-navbar-toggler-icon-bg) !important;
+}
+/* .navbar>.container-fluid{
+  display: block;
+} */
+.navbar-toggler{
+  float: right;
+  background-color: rgba(122,211,255,0.25);
+  padding: 0.458em 0.625em;
+  box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.25);
 }
