--- a/src/styles.css
+++ b/src/styles.css
@@ -2917,13 +2917,13 @@ cursor: pointer;
         margin-left: 0px !important;
     }
 
-    .index4-left-text h1 {
+    /* .index4-left-text h1 {
        
         padding: 60px 9px 21px 25px !important;
-    }
+    } */
 
 .index4-para{
-    padding: 1px 37px 10px 30px !important;
+    /* padding: 1px 37px 10px 30px !important; */
     line-height: 1.5 !important;
 }
 
