--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -71,9 +71,9 @@
 }
 
 
-/* .social_sec{
-    padding-top: 80px ;
-} */
+.social_sec{
+    padding: 50px 0;
+}
 .card_container{
     text-align: center;
     padding: 14px
