--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -1561,7 +1561,7 @@ color: #fff;
 }
 
 .index4-right-img img{
-  margin-top: 30%;
+  margin-top: 16%;
 }
 
 .index4-para{
@@ -1687,7 +1687,14 @@ hr .hr_1 {
     font-family: Raleway, sans-serif;
     color: rgb(87,87,86);
 }
-
+@media screen and (max-width: 820px){
+  .left-text-cont1 {
+    padding-top: 91px !important;
+}
+/* .index4-left-text h1 {
+  padding: 0 !important;
+} */
+}
 /* ==============================INDEX 4 ENDS===========================  */
 
 
