--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -25,7 +25,8 @@
           <em style="font-family: 'Raleway', sans-serif">This is a theme and can be customized, see it in action:</em>
         </h3>
         <a class="online-casino-link" href="https://babu365.com/" target="_blank">
-          <p>https://babu365.com/</p>
+          <p style="color: #a0c528;
+          font-weight: bold;">https://babu365.com/</p>
         </a>
 
         <br />
@@ -107,7 +108,7 @@
           <br />products.
         </p>
         <p class="casino_whites_sec_p">
-          In order to speed up your business, we offer <span > <a href="/casino" style="color: #a0c528; cursor: pointer;">White Label Casino</a></span> with
+          In order to speed up your business, we offer <span> <a href="/casino" style="color: #a0c528; cursor: pointer;">White Label Casino</a></span> with
           more than 30,000 games.
         </p>
 
