--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -65,7 +65,7 @@
                       </div>
                     </div>
                   </div>
-                  <div class="accordion-item">
+                  <!-- <div class="accordion-item">
                     <h3
                       data-bs-toggle="collapse"
                       data-bs-target="#collapseThree"
@@ -88,7 +88,7 @@
                         </p>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="accordion-item">
                     <h3
                       data-bs-toggle="collapse"
