--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -39,11 +39,7 @@
         <div class="index2-col2">
 
             <div class="iframe_sec_images">
-
-            <iframe width="" height="" src="https://www.youtube.com/embed/7rhY38DTdEI"
-                title="White label Live Casino platform" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
+<img class="live_images" src="assets/live casino.webp">
             </div>
         </div>
 
@@ -65,7 +61,7 @@
 <section class="container7">
     <div class="container7-row">
     <div class="container7-col1">
-        <img class="container_images_b" src="assets/sirplay vrnl 5_data.webp">
+        <img class="container_images_b" src="assets/Sirplay image 8.webp">
 
     </div>
 
@@ -82,7 +78,7 @@
             <div class="card_row1">
 
                 <div class="table-content1">
-                    <p >In our user-friendly Live Casino Game Lobby <br>you can <b>find games like:</b> <br><b>Live Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b></p>
+                    <p > <span class="tab_content" > In our user-friendly Live Casino Game Lobby</span>  <br> <br> <span class="tab_content" >you can</span> <b> find games like:</b> <br> <br><b>Live Roulette, Live Baccarat, Live Blackjack and Live Poker, Dice and Number games.</b></p>
                 </div>
 
 
