--- a/src/app/live-casino/live-casino.component.css
+++ b/src/app/live-casino/live-casino.component.css
@@ -16,7 +16,7 @@
 b{
   font-size: 16px;
     font-family: 'Poppins';
-    font-weight: 500;
+    font-weight: 595;
 }
 .container9{
     
@@ -2032,9 +2032,8 @@ width: 45%;
 }
 
 .index2-col2 img{
-    width: 85%;
-    height: 503px;
-    margin-left: 120px;
+  
+    margin-left: 81px;
     margin-top: 127px;
 }
 .index2-col-para p{
@@ -2085,6 +2084,11 @@ margin-top: 20%;
     font-weight: 200;
 }
 
+.live_images{
+  width: 563px;
+  height: 350px;
+  border-radius: 5px;
+}
 
 .container7-col2-content{   
   line-height: 1.8;
@@ -2092,9 +2096,9 @@ margin-top: 20%;
   width: 85%;
   padding: 0px 21px;
   /* padding: 17px 0px; */
-  font-family: 'Poppins';
   font-size: 16px;
   color: #686868;
+  font-weight: 395;
 }
 
 .container7-col2{
@@ -2142,37 +2146,39 @@ font-size: 52px;
 .text_1_main{
     margin-left: 98px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 450;
 }
 
 .text_2_main{
     margin-left: 166px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 450;
 }
 
 .text_3_main{
     margin-left: 122px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 450;
 }
 
 .text_4_main{
     margin-left: 187px;
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 450;
 }
 
 .text_5_main{
 margin-left: 146px;
 font-size: 16px;
-font-weight: 600;
+font-weight: 450;
 }
 
 .table-content1 p{
     /* padding: 1px 75px 0px 7px; */
     line-height: 1.9;
     border-bottom: 1px solid #f2f2f2;
+    padding: 7px;
+
 }
 
 
@@ -2234,9 +2240,19 @@ margin-top: 2%;
         font-size: 23px;
     }
 
+    .index2-col2{
+width: 100% !important;
 
-    .index2-col2 img{
-        width: 50%;
+    }
+
+    .index2-col2 img {
+      margin-left: 5px !important;
+      margin-top: 21px;
+  }
+
+    .live_images{
+width: 99% !important;
+height: auto !important;
     }
 
 
@@ -2329,15 +2345,17 @@ margin-top: 2%;
 }
 .btns_lives_sec{
 padding: 9px;
-    margin-top: 150px !important;
+    margin-top: 70px !important;
     border: none;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
     border-radius: 5px;
     box-shadow: 0em 0.15em 0.65em 0em rgba(0,0,0,0.25);
     background-color: rgba(255,255,255,1);
     width: 130px;
     color: #000;
+    height: 49px;
+
 }
 /* <!------LIVE CASINO end HERE-------> */
 
@@ -3593,7 +3611,15 @@ whites_param {
   width: 100%
 }
 
-
+.tab_content{
+  font-family: "Raleway",sans-serif;
+  font-size: 1.7em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.4;
+  text-align: center;
+  color: rgba(0,0,0,1)
+}
 
 
 
