--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -117,7 +117,7 @@
     <footer>
       <div class="footer_sec">
         <div class="footer_para">
-          <p style="color: white;"><a href="">vrnl.net.</a> 2023 All Rights Reserved</p>
+          <p style="color: rgba(255, 255, 255, .8);"><a href="">vrnl.net.</a> 2023 All Rights Reserved</p>
         </div>
       </div>
     </footer>
