--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -122,10 +122,13 @@
             <li><a class="act" routerLink="/contact">Contact</a></li>
             <li>
               <a class="act" href="#"
-                ><img src="assets/en.png" alt="flag" /> English</a
+                >
+                <!-- <img src="assets/en.png" alt="flag" /> -->
+                 Our Theme
+                </a
               >
 
-              <div class="sub_menu">
+              <!-- <div class="sub_menu">
                 <ul>
                   <li class="list">
                     <img src="assets/pt-br.png" title="Portuguese (Brazil)" />
@@ -151,7 +154,7 @@
                     Chinese (Simplified)
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </li>
           </div>
         </div>
