--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -229,6 +229,7 @@ padding-top: 120px;
 .partners_logo_sec_desk {
   max-width: 1270px;
   margin: auto;
+  margin-top: 32px;
 }
 .partners_logo_box {
   width: 100%;
