--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -96,7 +96,20 @@
           <div class="container" style="margin-top: 5rem;">
              <h3 class="partner-title aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">Our Client
              </h3>
-             <p style="color: #686868;" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000" class="aos-init aos-animate">Vrnl is proud to have partnered with
+             <p style="color: #686868;text-align: justify;" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000" class="aos-init aos-animate">
+              At Vrnl, we are relentless in our pursuit of the finest gaming and entertainment partnerships to ensure an unparalleled experience for our clients and players. Through collaborative agreements with renowned international casinos and virtual games providers, we have seamlessly integrated our Sports Betting Platform with an extensive array of games. These offerings encompass everything from slot machines and table games to live casino experiences, virtual games, and even fantasy games.
+
+Our commitment to excellence extends beyond the diversity of games. Our platform is accessible on both desktop PCs and mobile devices, featuring high-quality graphics, captivating animations, and immersive audio. Furthermore, our intuitive and user-friendly menu enhances the overall user experience.
+
+At the core of our operations is a fast integration process, combining scalability, flexibility, and top-tier performance within our betting software. This integration process is underpinned by the highest levels of security and reliability, assuring our clients of a safe and trustworthy gaming environment.
+
+We take pride in presenting our clients with the widest selection of games within the sector, delivering the perfect gaming solutions for every preference. Welcome to Vrnl, where gaming excellence meets limitless possibilities.
+              
+              
+              
+              
+              
+              Vrnl is proud to have partnered with
                 the industry’s most distinctive names across games software providers and payment solutions. Share our
                 platform for success and add your name to this growing list.</p>
              <div class="partners_logo_sec partners_logo_sec_desk aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="000">
@@ -277,7 +290,7 @@
                   </a>
 
                   <a class="box" href="https://www.9ex365.bet/#/dash" target="_blank">
-                    <img src="/src/assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
+                    <img src="/assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
                   </a>
 
                   <a class="box" href="https://www.betguru.win/#/dash" target="_blank">
