--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -40,7 +40,7 @@
 
             <div class="iframe_sec_images">
 
-                <img src="assets/casinogirl.png" width="100%">
+                <img src="assets/live casino.webp" width="100%">
 
             </div>
         </div>
