--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -13,7 +13,7 @@
   font-family: Poppins;
   padding-top: 78px;
   justify-content: center;
-  gap: 5%;
+  gap: 0%;
 }
 .sportsbetting-section1-col2{
   width: 48%;  
@@ -37,8 +37,8 @@
   font-size: 16px;
   line-height: 2.2;
   font-weight: 395;
-  font-family: Poppins;
-  color: #686868;
+  font-family: "Raleway",sans-serif;
+  color: rgb(47,47,47);
 
 }
 
@@ -46,9 +46,9 @@
   line-height: 1.3;
   text-align: center;
   font-style: normal;
-  font-weight: 300;
-  font-size: 221.5%;
-  font-family: Poppins;
+  font-weight: 400;
+  font-size: 34px;
+  font-family: "Raleway",sans-serif;
   width: 100%;
   color: #272727;
   margin-bottom: 20px;
@@ -62,6 +62,7 @@
 .sportsbetting-section1-col1-link a {
   text-decoration: none;
   color: #a0c528;
+  font-family: "Raleway",sans-serif;
 }
 
 .sportsbetting-section1-col2 iframe {
@@ -132,20 +133,19 @@ justify-content: center;
   letter-spacing: 0.001em;
   color: rgb(87, 87, 86);
   /* font-size: 34px; */
-     font-weight: 395;
+     font-weight: 100;
 
   letter-spacing: 0.001em;
 
 }
 
 .sportsbetting-mainfeature-col2 p {
-     font-weight: 395;
-
+  font-weight: 300;
   line-height: 1.9;
   letter-spacing: 0.01em;
   font-size: 16px;
   color: rgb(47, 47, 47);
-  font-family: Poppins;
+  font-family: "Raleway",sans-serif;
 
 }
 
@@ -167,6 +167,7 @@ justify-content: center;
 
 strong{
   font-weight: bold;
+  font-family: "Raleway",sans-serif;
 }
 
 .sportsbetting-benefits {
@@ -202,18 +203,17 @@ strong{
   color: rgb(87, 87, 86);
   /* font-size: 36px; */
   font-weight: 600;
-  font-family: Poppins;  
+  font-family: "Raleway",sans-serif;  
 }
 
 .sportsbetting-benefits p {
-     font-weight: 395;
-
+  font-weight: 395;
   line-height: 1.9;
   letter-spacing: 0.01em;
   font-size: 16px;
   color: rgb(47, 47, 47);
   margin: 0 0 1.5em;
-  font-family: Poppins;
+  font-family: "Raleway",sans-serif;
 
 }
 
@@ -240,7 +240,7 @@ strong{
 
 .sportsbetting-complete-sports-col1 h2 {
   color: rgb(87, 87, 86);
-  font-size: calc(285.7%);
+  font-size: 44px;
   font-weight: 100;
   font-family: Poppins;
   margin-bottom: 30px;
@@ -255,7 +255,7 @@ strong{
   text-transform: none;
   color: rgb(87, 87, 86);
   font-weight: bold;
-  font-family: Poppins;
+  font-family: "Raleway",sans-serif;
 
 }
 .sportsbetting-complete-sports-col1 ul li {
@@ -270,7 +270,7 @@ strong{
 
 .sportsbetting-complete-sports-col1 p {
   line-height: 1.8;
-  font-family: Poppins;
+  font-family: "Raleway",sans-serif;
   font-size: 16px;
   font-weight: 395;
 
@@ -309,8 +309,8 @@ height: 93%;
   text-transform: none;
   color: rgb(87, 87, 86);
   font-weight: 200;
-  font-size: calc(285%);
-  font-family: Poppins;
+  font-size: 41px;
+  font-family: "Raleway",sans-serif;
 
 }
 
@@ -321,8 +321,8 @@ height: 93%;
   font-size: 16px;
   letter-spacing: 0em;
   font-weight: 395;
-  font-family: Poppins;
-  color: #686868;
+  font-family: "Raleway",sans-serif;
+  color: rgb(0,0,0);
 
 }
 
@@ -364,8 +364,8 @@ height: 93%;
   color: rgb(87, 87, 86);
   font-weight: 200;
   /* font-size: calc(285.7%); */
-  font-family: Poppins;
-  font-size: 45px;
+  font-family: "Raleway",sans-serif;
+  font-size: 41px;
   margin-bottom: 30px;
   width: 70%;
 
@@ -380,7 +380,7 @@ height: 93%;
 }
 .sportsbetting-betting-software-col1 p {
   line-height: 1.8;
-  color: #686868;
+  color: rgb(0,0,0);
   font-size: 16px;
   letter-spacing: 0em;
   font-weight: 395;
@@ -2765,4 +2765,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   .sportsbetting-mainfeature-col2 h2{
     width: 100%;
   }
+}
+.sportsbetting-section1-button button:hover{
+  border-top-color: rgb(109,140,1);
+    border-right-color: rgb(109,140,1);
+    border-bottom-color: rgb(109,140,1);
+    border-left-color: rgb(109,140,1);
+    background-color: rgb(160,197,40);
+    box-shadow: 0em 0.1em 0.25em 0em hsla(0,0%,0%,0.15);
+    color: #fff !important;
 }
