--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -106,6 +106,8 @@ p{
 }
 p{
   font-size: 17px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .section-title{
   margin-top: 110px !important;
