--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
 			<hr>
 		</li>
         <li id="cs-81" class="icon-mail">
-			<a target="_blank" href="mailto:marketing@crickex.com">
+			<a target="_blank" href="skype:live:9960f32f776599a2?chat">
 				<img src="assets\icons8-skype.gif" ui-key="realIconPath">
 				<span ui-key="displayText">skype</span>
 				
