--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -97,7 +97,7 @@
         <!-- <div><p class="comp_list">News</p></div>
         <div><p class="comp_list">Certifications</p></div> -->
         <div>
-          <a href="/chck.html"><p class="comp_list">Privacy Policy</p></a>
+          <a href="/privacy-policy"><p class="comp_list">Privacy Policy</p></a>
         </div>
         <div><p class="comp_list"><a href="/contact" target="_blank">Contact Us</a></p></div>
       </div>
