--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -161,7 +161,7 @@
           <i class="fa-brands fa-twitter"></i>
           <i class="fa-brands fa-youtube"></i>
           <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-skype"></i>
+          <a target="_blank" href="skype:live:9960f32f776599a2?chat" style="color: black;"> <i class="fa-brands fa-skype"></i></a>
           <a target="_blank" href="https://www.instagram.com/vrnl_exchange" style="color: black;"> <i class="fa-brands fa-instagram"></i></a>
          
         </div>
