--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -18,7 +18,7 @@
         <div class="white_casino_col_1 ">
     <div class="white_casino_v">
         <!-- <iframe width="" height="" src="assets/online-whitelabel-casino.jpg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen ></iframe> -->
-        <img src="assets/online-whitelabel-casino.jpg"  class="casino-img">
+        <img src="assets/look-girl-art-hall-wallpaper-preview.jpg"  class="casino-img tv_image">
     </div>
         </div>
     </div>
