--- a/src/app/mobile/mobile.component.css
+++ b/src/app/mobile/mobile.component.css
@@ -2272,17 +2272,17 @@ width: 97%;
       display: flex;
       font-family: 'Raleway', sans-serif;
       margin-top: 14%;
-      gap: 10%;
+      justify-content: center;
+      gap: 6%;
   }
   
   .mobile-sports-left{
       width: 35%;
-      margin-left: 8%;
+    
   
   }
   
   .mobile-sports-left h1{
-  font-size: calc(285.7%);
       font-style: normal;
       font-weight: 200;
       line-height: 1.3;
@@ -2291,13 +2291,14 @@ width: 97%;
       text-transform: none;
       color: rgb(87,87,86);
       font-family: 'Raleway', sans-serif;
-
+      font-size: 45px;
+      margin-bottom: 43px;
       
   }
   
   
   .mobile-sports-left p{
-      font-size: 1.4em;
+      font-size: 2.2em;
       line-height: 1.8;
       margin: 0 0 1.5em;
       font-weight: 300;
@@ -2325,18 +2326,20 @@ width: 97%;
   .mobile-advantages-main{
       display: flex;
       font-family: 'Raleway', sans-serif;
-      gap: 19%;
+      gap: 6%;
       margin-top: 5%;
+      justify-content: center;
   }
   
   
   .mobile-advantages-left{
   width: 35%;
-  margin-left: 8%;
+
   }
   
   .mobile-advantages-left h1{
-  font-size: calc(285.7%);
+      font-size: 43px;
+      width: 91%;
       font-style: normal;
       font-weight: 200;
       line-height: 1.3;
@@ -2345,13 +2348,14 @@ width: 97%;
       text-transform: none;
       color: rgb(87,87,86);
       font-family: 'Raleway', sans-serif;
-      margin-bottom: 15px;
+      margin-bottom: 35px;
+
 
   }
   
   .mobile-advantages-left p{
   margin: 0 0 1.5em;
-  font-size: 1.2em;
+  font-size: 1.5em !important;
       line-height: 1.4;
       font-style: normal;
       font-weight: 300;
@@ -2364,7 +2368,7 @@ width: 97%;
   
   .mobile-advantages-left strong{
   font-style: normal;
-  font-size: 1.2em;
+  font-size: 1.7em !important;
       line-height: 1.4;
       letter-spacing: 0em;
       text-transform: none;
@@ -2373,7 +2377,7 @@ width: 97%;
   
   
   .mobile-advantages-right img{
-  margin-top: 34%;
+  margin-top: 14%;
   }
   
   /* ==========================mobile-betting media query=========================================  */
@@ -2388,7 +2392,10 @@ width: 97%;
           width: 88%;
           margin-left: 7%;
       }
-  
+      .mobile_images{
+        width: 100% !important;
+        height: auto !important;
+      }
   /* ========================================== */
   
       .mobile-advantages-main{
@@ -2396,7 +2403,8 @@ width: 97%;
       }
   
       .mobile-advantages-left{
-      width: 84%;
+      width: 100%;
+      padding: 12px;
       }
   
   
@@ -2408,6 +2416,11 @@ width: 97%;
       
   }
   .image_1{
-    width: 468px;
+    width: 535px;
   }
   /* mobile betting */
+
+  .mobile_images{
+    width: 450px;
+    height: 640px;
+  }
