--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="mobile-sports-right"></div>
-            <img src="assets/Mobile-sports-betting-software.jpg.webp" alt="">
+            <img class="mobile_images" src="assets/VRNL 211.webp" alt="">
 
     </div>
 </section>
@@ -40,92 +40,11 @@ It will also allow you to promote a match, league or bet, regularly increasing y
         </div>
         
         <div class="mobile-advantages-right">
-            <img src="assets/Sirplay image 7.webp" alt="" class="image_1">
+            <img src="assets/VRNL 2.webp" alt="" class="image_1">
         </div>
 
     </div>
 </section>
 
-<section class="contact_sec">
-    <div class="contact_row">
-      <div class="contact_col">
-        <h3 class="contact_header">Contact US</h3>
-        <p class="contact_para">
-          Connect with a Vrnl expert for a detailed discussion about how
-          our services might give benefits to your Betting business and create
-          your own strategy.
-        </p>
-        <div class="contact_social">
-          <div class="contact_details">
-            <div class="row_col">
-              <img src="assets/Skype_logo.webp" />
-            </div>
-            <div class="row_col_1">
-              <p class="contact_b">English Spanish</p>
-            </div>
-          </div>
-        </div>
-        <div class="contact_social">
-          <div class="contact_details">
-            <div class="row_col">
-              <img class="whats_img" src="assets/Whatsapp.webp" />
-            </div>
-            <div class="row_col_1">
-              <p class="contact_a">+356 99972143</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="contact_col_1">
-        <div class="contact_card">
-          <form>
-            <div class="name_label">
-              <label for="fname">Full name</label>
-            </div>
-            <div class="name_input">
-              <input type="text" id="fname" name="fname" value="" required />
-            </div>
-            <div class="email_label">
-              <label for="fname"><b>Your email</b></label>
-            </div>
-            <div class="email_input">
-              <input
-                type="text"
-                id="fname"
-                name="fname"
-                value=""
-                onkeypress="myFunction()"
-              />
-            </div>
-            <div class="email_label">
-              <label for="fname"><b>Country</b></label>
-            </div>
-            <div class="email_input">
-              <input type="tel" id="country_selector" name="phone" value="" />
-            </div>
-            <div class="email_label">
-              <label for="fname"><b>Phone Number</b></label>
-            </div>
-            <div class="email_input">
-              <input value="" id="phone" type="tel" name="phone" />
-            </div>
-            <div class="email_label">
-              <label for="fname"><b>Message</b></label>
-            </div>
-            <div class="text_area">
-              <textarea rows="20" cols="44"></textarea>
-            </div>
-            <div class="btn">
-              <button class="con_btn">Submit</button>
-            </div>
-          </form>
-        </div>
-        <p class="con_param">
-          We don’t share your personal information with anyone. Check out our
-          <span class="white_change">“privacy policy”</span> for more
-          information
-        </p>
-      </div>
-    </div>
-  </section>
+
 <app-footer></app-footer>
