--- a/src/app/esport/esport.component.css
+++ b/src/app/esport/esport.component.css
@@ -1204,8 +1204,8 @@ Responsive Codes
   margin-right: calc(0.001em * -1);
   text-transform: none;
   color: #686868;
-  font-size: calc(220%);
-  font-weight: 600;
+  font-size: 34px;
+  font-weight: 500;
   font-family:  Poppins;
 
 }
@@ -1219,7 +1219,7 @@ Responsive Codes
   color: #686868;
  font-weight: 395;
 
-  font-family:Poppins;
+  font-family:"Raleway",sans-serif;
 
 }
 
@@ -1283,24 +1283,26 @@ Responsive Codes
 }
 
 .top-esports-col1 h2 {
-  font-family:  Poppins;
+  font-family: "Raleway",sans-serif;
   font-style: normal;
   line-height: 1.3;
   letter-spacing: 0.001em;
   text-transform: none;
-  color: #686868;
-  font-size: calc(185.7%);
+  color: rgb(87,87,86);
+  font-size: 30px;
+  font-weight: 500;
 }
 
 .top-esports-col1 p {
-  font-size: 16px;
+  font-size: 17px;
   font-style: normal;
  
   line-height: 33px;
   letter-spacing: 0em;
   text-transform: none;
-  font-family: Poppins;
+  font-family: "Raleway",sans-serif;
   padding-top: 24px;
+  font-weight: 400;
 
 }
 
@@ -1366,9 +1368,12 @@ Responsive Codes
  font-weight: 395;
 
   margin: 0 0 1.5em;
-  color: #686868;
+  color: rgb(47,47,47);
   font-family: "Raleway", sans-serif;
 
+}
+strong{
+  font-family: "Raleway", sans-serif;
 }
 
 /* =============================================================== */
@@ -1381,7 +1386,7 @@ Responsive Codes
 .esports-betting-middle-row1 h2 {
   text-align: center;
   font-size: calc(314%);
- font-weight: 395;
+ font-weight: 500;
 
   font-style: normal;
   line-height: 1.3;
@@ -2480,10 +2485,16 @@ width: 97%;
   transition-duration: 300ms;
 }
 .esports-betting-col1-button button:hover {
-  background: linear-gradient(to right, rgb(160, 197, 40) 50%, transparent 50%),
+  /* background: linear-gradient(to right, rgb(160, 197, 40) 50%, transparent 50%),
               linear-gradient(to left, rgb(131, 161, 20) 50%, transparent 50%);
-  background-position: left top, right top; /* Set the background positions */
+  background-position: left top, right top;  */
    /* Set the background size */
+   border-top-color: rgb(109,140,1);
+    border-right-color: rgb(109,140,1);
+    border-bottom-color: rgb(109,140,1);
+    border-left-color: rgb(109,140,1);
+    background-color: rgb(160,197,40);
+    box-shadow: 0em 0.1em 0.25em 0em hsla(0,0%,0%,0.15);
   color: white; /* Change text color on hover */
 }
 
