--- a/src/app/live-casino/live-casino.component.css
+++ b/src/app/live-casino/live-casino.component.css
@@ -15,7 +15,8 @@
 
 b{
   font-size: 16px;
-    font-family: 'Poppins';
+    /* font-family: 'Poppins'; */
+    font-family: "Raleway",sans-serif;
     font-weight: 595;
 }
 .container9{
@@ -2042,6 +2043,7 @@ width: 45%;
 }
 strong{
   font-weight: bold;
+  font-family: "Raleway",sans-serif;
 }
 .demo-live{
     font-size: 35px;
@@ -2108,7 +2110,7 @@ width: 40%;
 }
 
 .container7-col2 h2 strong{
-font-size: 52px;
+font-size: 51px;
 }
 
 
@@ -2346,7 +2348,7 @@ height: auto !important;
 }
 .btns_lives_sec{
 padding: 9px;
-    margin-top: 70px !important;
+    margin-top: 42px !important;
     border: none;
     font-size: 16px;
     font-weight: 600;
@@ -3454,9 +3456,15 @@ table th, table td {
   text-align: center;
   color: rgba(0,0,0,1)
 }
-
-
-
+.index2-col .index2-col-para2{
+  font-family: "Raleway",sans-serif;
+}
+li{
+  font-family: "Raleway",sans-serif;
+}
+.demo-link p{
+  font-family: "Raleway",sans-serif;
+}
 
 
 
