--- a/src/app/privacy-policy/privacy-policy.component.css
+++ b/src/app/privacy-policy/privacy-policy.component.css
@@ -1,58 +1,51 @@
-.relative {
-    position: relative;
+*{
+    font-family: Poppins !important;
+ 
 }
-.text-center {
-    text-align: center;
+
+
+.home a {
+    font-size: 18px;
+
 }
-.header-title-breadcrumb-overlay {
-    background: #fff;
-    box-sizing: border-box;
-    padding: 100px 0;
-    width: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.container {
-    margin-right: auto;
-    margin-left: auto;
+.container{
+    padding: 80px 0;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
 }
-.btn-group-vertical>.btn-group:after, .btn-group-vertical>.btn-group:before, .btn-toolbar:after, .btn-toolbar:before, .container-fluid:after, .container-fluid:before, .container:after, .container:before, .dl-horizontal dd:after, .dl-horizontal dd:before, .form-horizontal .form-group:after, .form-horizontal .form-group:before, .modal-footer:after, .modal-footer:before, .nav:after, .nav:before, .navbar-collapse:after, .navbar-collapse:before, .navbar-header:after, .navbar-header:before, .navbar:after, .navbar:before, .pager:after, .pager:before, .panel-body:after, .panel-body:before, .row:after, .row:before, .vc_row:after, .vc_row:before {
-    content: " ";
-    display: table;
-}
-.row {
-    margin-left: -15px;
-    margin-right: -15px;
-}
-.header-title-breadcrumb-overlay h1 {
-    align-self: center;
-    color: #fff;
-    font-size: 65px;
+h3, h3 span {
+    font-family: Poppins;
+    line-height: 28px;
     font-weight: 600;
-    line-height: 1 !important;
-    margin: 0 auto;
-    padding: 0px 0 20px;
-    text-transform: capitalize;
-    width: 100%;
-    text-align: center;
+    font-size: 28px;
 }
-.breadcrumb {
-    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-    text-align: center;
+p {
+line-height: 30px;
+font-weight: 390;
+color: #000;
+font-size: 16px;
+margin-bottom: 17px;
 }
-.breadcrumb li  {
-    color: #fff !important;
-    font-weight: 400;
-    transition: all 300ms ease-in-out 0s;
-    -o-transition: all 300ms ease-in-out 0s;
-    -ms-transition: all 300ms ease-in-out 0s;
-    -webkit-transition: all 300ms ease-in-out 0s;
-    -moz-transition: all 300ms ease-in-out 0s;
+
+.privacy_list_2 li strong{
+    font-size: 22px;
+    line-height: 68px;
+}
+.privacy_list_2 li span,.privacy_list li span{
+    font-size: 16px;
+}
+.privacy_list_2 li{
+    font-size: 16px;
+}
+.privacy_list_2 a{
+color: #a0c528;;
+}
+.privacy_list_2 a:hover{
+    color: #030303;;
+}
+li{
+    font-weight: 390;
 }
