--- a/src/app/online-sportsbook/online-sportsbook.component.css
+++ b/src/app/online-sportsbook/online-sportsbook.component.css
@@ -15,6 +15,7 @@
 .slide_right:hover {
     box-shadow: inset 400px 0 0 0 #a0c528;
     border-color: #a0c528;
+    color: #fff;
 }
 .button_slide{
     color: #000000;
@@ -120,3 +121,6 @@ b, strong {
         width: 735px;
     }
 } */
+.onther_a{
+    font-size: 15px !important;
+  }
